# sql_agents

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
postgres_sql-agents/: README.md
postgres_sql-agents/src/: app.py
postgres_sql-agents/src/utils/: logger.py
skill-sql-agent/skills/inventory_management/: skill.md
skill-sql-agent/skills/sales_analytics/: skill.md
skill-sql-agent/src/utils/: logger.py
skills_sql_agent/: README.md
skills_sql_agent/skills/: skill.py
skills_sql_agent/skills/inventory_management/: skill.md
skills_sql_agent/skills/sales_analytics/: skill.md
skills_sql_agent/src/: app.py  database.py
skills_sql_agent/src/utils/: logger.py
sql-agents/: README.md
sql-agents-postgres/: README.md
sql-agents-postgres/src/: app.py
sql-agents-postgres/src/utils/: logger.py
sql-agents/src/: app.py  database.py
sql-agents/src/utils/: logger.py
sqlite_sql_agents/: README.md
sqlite_sql_agents/src/utils/: logger.py
