[project]
name = "sql-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain[google-genai]>=1.2.12",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.2",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
]
